@@ -85,7 +85,7 @@
     <shade.prefix>parquet</shade.prefix>
     <hadoop.version>1.1.0</hadoop.version>
     <cascading.version>2.5.3</cascading.version>
-    <parquet.format.version>2.0.0</parquet.format.version>
+    <parquet.format.version>2.1.0</parquet.format.version>
     <log4j.version>1.2.17</log4j.version>
     <previous.version>1.3.1</previous.version>
     <thrift.executable>thrift</thrift.executable>
@@ -272,6 +272,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.0.2</version>
         <configuration>
+          <argLine>-XX:MaxPermSize=256m</argLine>
           <source>1.6</source>
           <target>1.6</target>
           <encoding>UTF-8</encoding>
